# test-pilot

./: .gitignore  CI_CD_SETUP_GUIDE.md  FINAL_RECOMMENDATION.md  LICENSE  LLM_Agent_MCP_Summary.md  README.md  STORAGE_STATE_TROUBLESHOOTING.md  check_playwright_tools.py  debug-enhanced-two-stage.sh  debug-two-stage.sh  gemini_connect.py  pyproject.toml  run-headed-mode.sh  test-suite-runner.sh  test_gemini_connection.py  test_openai_connection.py  test_pilot_simple.py  test_report.json  test_report.md  test_storage_state.py  test_storage_validation.py  test_storage_validation_fixed.py  test_storage_with_empty.py
docs/: icims-ats-demo-simple.md  icims-ats-demo.md  playwright.prompt.md
src/test_pilot/: __init__.py
tests/exploratory/: OPTIMIZATION_SUMMARY.md  quick_headless_test.py  test_pilot_simple.py  validate_cicd_setup.py
