[tool.poetry]
name = "test-pilot"
version = "0.1.0"
description = "Test scripts for Playwright MCP and Gemini integration"
authors = ["Shuhai Miao <smiao@example.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
python-dotenv = "^1.1.1"
langchain-google-genai = "^2.1.7"
langchain-core = "^0.3.68"
langchain-openai = "^0.3.27"
langchain-mcp-adapters = "^0.1.9"
langgraph = "^0.5.2"
mcp = "^1.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
